<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">SecurityCamAppActivity</string>
    <string name="app_name">SecurityCamApp</string>
    <string name="take">take</string>
    <string name="send">send</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="port">Port</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="smtp">SMTP Server</string>
    <string name="from">From Address</string>
    <string name="to">To Address</string>
    <string name="config">config</string>
	<string name="codeword">Sms Codeword</string>
	<string name="Hour">Hour</string>
	<string name="Minute">Minute</string>
	<string name="schedule">Schedule Daily</string>
</resources>